backdrop-filter,background,clock inside card.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <div id="MyclockDisp" class="clock" onboard="showTime"></div>
+  <div class="card">
+  <div id="MyclockDisp" class="clock" onboard="showTime"></div></div>
   <script src="script.js"></script>
 </body>
 
